# BlueW

./: .gitignore  BRAND.md  CNAME  README.md  package.json
.github/workflows/: deploy-pages.yml
docs/: 01_Guia_Basica_Blockchain.md  02_Guia_Creacion_Memecoin.md  03_Plan_Automatizacion_Redes.md  04_Checklist_Lanzamiento.md
src/contract/: Anchor.toml  Cargo.toml
src/contract/programs/bluewave/: Cargo.toml
src/contract/programs/bluewave/src/: lib.rs
src/docker/: .env.example  docker-compose.yml
src/metadata/: token.json
src/n8n/: bluewave_workflow.json
src/scripts/: create-token.js  create-token.ts  deploy.sh  generate_content.py  generate_video.py  package.json  post_to_social.py  scheduler.py  setup-oracle.sh
website/: index.html
website/css/: style.css
website/js/: app.js
