[package]
name = "bluewave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "4.1.0"
spl-token-2022 = "2.0.0"

[dev-dependencies]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
